# Adaptive-RAG-Reflex-Demo

./: .gitignore  README.md  README_en.md  main.py  pyproject.toml  requirements.txt
data/: ingestion.py
src/cli/: main.py
src/models/: model.py
src/workflow/: consts.py  graph.py  state.py
src/workflow/chains/: answer_grader.py  generation.py  hallucination_grader.py  query_split.py  reflex.py  retrieval_grader.py  router.py  search_prompt.py
src/workflow/nodes/: chat_manage.py  generate.py  grade_document.py  query_splitter.py  reflection.py  retriever.py  web_search.py
test/: test_chains.py
