[project]
name = "adaptiverag-reflex-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.6.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "banks==2.2.0",
    "beautifulsoup4==4.13.5",
    "bert-score==0.3.13",
    "bitsandbytes==0.47.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cryptography==46.0.1",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "datasets==4.2.0",
    "decorator==5.2.1",
    "deprecated==1.2.18",
    "dill==0.4.0",
    "dirtyjson==1.0.8",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "evaluate==0.4.6",
    "executing==2.2.1",
    "faiss-cpu==1.11.0",
    "filelock==3.19.1",
    "filetype==1.2.0",
    "fonttools==4.60.1",
    "frozenlist==1.7.0",
    "fsspec==2025.9.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2",
    "greenlet==3.2.4",
    "griffe==1.14.0",
    "gspread==6.2.0",
    "h11==0.16.0",
    "hf-xet==1.1.10",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "ipykernel>=7.0.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "jedi==0.19.2",
    "jieba==0.42.1",
    "jinja2==3.1.6",
    "jiter==0.11.0",
    "joblib==1.5.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyterlab-widgets==3.0.15",
    "kiwisolver==1.4.9",
    "langchain==0.3.24",
    "langchain-community==0.3.21",
    "langchain-core==0.3.75",
    "langchain-huggingface==0.1.2",
    "langchain-openai==0.3.16",
    "langchain-tavily==0.2.12",
    "langchain-text-splitters==0.3.11",
    "langgraph==0.5.4",
    "langgraph-checkpoint==2.1.1",
    "langgraph-checkpoint-postgres==2.0.24",
    "langgraph-prebuilt==0.5.2",
    "langgraph-sdk==0.1.74",
    "langsmith==0.3.45",
    "llama-cloud==0.1.19",
    "llama-cloud-services==0.6.19",
    "llama-index==0.12.33",
    "llama-index-agent-openai==0.4.6",
    "llama-index-cli==0.4.1",
    "llama-index-core==0.12.33.post1",
    "llama-index-embeddings-huggingface==0.5.3",
    "llama-index-embeddings-openai==0.3.1",
    "llama-index-indices-managed-llama-cloud==0.6.11",
    "llama-index-llms-openai==0.3.38",
    "llama-index-multi-modal-llms-openai==0.4.3",
    "llama-index-program-openai==0.3.1",
    "llama-index-question-gen-openai==0.3.0",
    "llama-index-readers-file==0.4.7",
    "llama-index-readers-llama-parse==0.4.0",
    "llama-index-vector-stores-faiss==0.3.0",
    "llama-parse==0.6.18",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "mypy-extensions==1.1.0",
    "narwhals==2.5.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "oauthlib==3.3.1",
    "ollama==0.4.8",
    "openai==1.76.0",
    "orjson==3.11.3",
    "ormsgpack==1.10.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.5",
    "pdfminer-six==20250327",
    "pdfplumber==0.11.6",
    "pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "protobuf==6.32.1",
    "psutil==7.0.0",
    "psycopg[binary]==3.2.10",
    "psycopg-pool==3.2.6",
    "ptyprocess==0.7.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23 ; implementation_name != 'PyPy'",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pypdf==5.9.0",
    "pypdf2==3.0.1",
    "pypdfium2==4.30.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rank-bm25==0.2.2",
    "referencing==0.36.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rouge-score==0.1.2",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "safetensors==0.6.2",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "sentence-transformers==4.1.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "snownlp==0.12.3",
    "soupsieve==2.8",
    "sqlalchemy==2.0.40",
    "stack-data==0.6.3",
    "streamlit==1.45.0",
    "striprtf==0.0.26",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.4",
    "toml==0.10.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.51.3",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0 ; sys_platform != 'darwin'",
    "wcwidth==0.2.14",
    "widgetsnbextension==4.0.14",
    "wrapt==1.17.3",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zstandard==0.23.0",
    "pytest>=8.4.2",
]


